testing Signed-off-by: Darpa Meher <darpan.meher@gmail.com>

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <div class="main-box">
         <div class="auto-container clearfix ">
           <div class="logo-box">
-            <div class="logo"><a href="index.html"><img src="images/logo-2.png" alt="BlissMatch" title="BlissMatch"></a>
+            <div class="logo"><a href="index.html"><img src="images/logo-2.png" alt="BlissMatch1" title="BlissMatch"></a>
             </div>
           </div>
           <!--Nav Box-->
