Membership page added, home page removed unwanted section

--- a/about-us.html
+++ b/about-us.html
@@ -106,7 +106,10 @@
             <div class="logo-box">
               <div class="logo">
                 <a href="index.html"
-                  ><img src="images/logo-2.png" alt="BlissMatch" title="BlissMatch"
+                  ><img
+                    src="images/logo-2.png"
+                    alt="BlissMatch"
+                    title="BlissMatch"
                 /></a>
               </div>
             </div>
@@ -154,7 +157,7 @@
                         <li><a href="safematrimony">Safe Matrimony</a></li>
                       </ul>
                     </li>
-                    <li><a href="my_offer">Membership </a></li>
+                    <li><a href="membership-plans.html">Membership </a></li>
                     <!-- <li><a href="smart_search">Search</a></li> -->
                     <li><a href="contactus.html">Contact </a></li>
                     <!--<li><a href="https://readymatrimonial.in/blog/" target="_blank">Blog</a></li>-->
@@ -415,10 +418,10 @@
               <div class="inner-column">
                 <div class="sec-title">
                   <span class="title">ABOUT US</span>
-                  <h2>Welcome to matrimonysoftware.in</h2>
+                  <h2>Welcome to BlissMatch</h2>
                   <div class="text">
                     <p style="text-align: justify">
-                      <strong>Ready Matrimonial </strong>is one of the
+                      <!-- <strong>Ready Matrimonial </strong>is one of the
                       professional and highly experienced Matrimonial Website
                       Development Companies in India. As one of the leading
                       matrimonial software development organizations in India,
@@ -428,7 +431,23 @@
                         ><strong>PHP Developers</strong></a
                       >
                       with us, who work in a synchronized manner to provide you
-                      the perfect Matrimony Software at a reasonable cost.
+                      the perfect Matrimony Software at a reasonable cost. -->
+                      <p>There's nothing more satisfying than being with your
+                      soulmate for the rest of your life, Encouraging each other
+                      in all labor, comforting in all sorrow and sharing silent
+                      unspeakable memories till that last moment. We help you
+                      find this soulmate in ways which are commendable and worth
+                      a vow.</p>
+                      <p>With an astounding success rate in finding relevant
+                      matches,bliss match has gracefully embarked its niche in
+                      the market.</p> 
+                      <p>Personalized services with end to end
+                      assistance always ensures a happily married couple. Our
+                      young enthusiastic team provides personalized online
+                      /offline marriage introduction service. As these trained
+                      matchmakers have more than a decade of experience in this
+                      field, they provide unmatched assistance with the most
+                      relevant matches.</p>
                     </p>
                   </div>
                 </div>
@@ -473,7 +492,7 @@
 
       <!-- Subscribe Section -->
       <section class="subscribe-section">
-        <div class="auto-container">
+        <div class="subscribe-auto-container">
           <div class="content-box">
             <div class="row">
               <!-- <div class="title-column col-lg-6 col-md-12">
@@ -500,73 +519,74 @@
         </div>
       </section>
       <!--End Subscribe Section -->
-
-      <footer class="main-footer style-two">
-        <div class="auto-container">
-          <!-- Footer Content -->
-          <div class="footer-content" style="padding: 25px 0 10px">
-            <div class="footer-logo ftr-dsk-lg">
-              <a href="about-us#"
-                ><img src="./images/logo.png" alt="Site Logo"
-              /></a>
-            </div>
-            <ul class="footer-nav ftr-dsk-mn">
-              <li><a href="index.html">Home</a></li>
-              <li>|</li>
-              <li><a href="signup">SignUp</a></li>
-              <li>|</li>
-
-              <li><a href="success_story">Happy Story</a></li>
-              <li>|</li>
-              <li>
-                <a href="wedding-directory/index" target="_blank"
-                  >Wedding Services</a
-                >
-              </li>
-              <!--<li>|</li>
-                    <li><a href="franchise/login" target=_blank>Franchise</a></li>-->
-              <!--<li><a href="https://readymatrimonial.in/blog/" target=_blank>Blog</a></li>-->
-              <li>|</li>
-              <li><a href="contactus">Contact Us</a></li>
-            </ul>
-            <div class="copyright-text">
-              © 2025 matrimonysoftware.in All Rights Reserved. Powered By
-              <a href="https://www.readymatrimonial.in/" target="_blank"
-                >INFINITY SYSTEMS</a
-              >
-            </div>
-            <ul class="social-icon-one">
-              <li>
-                <a
-                  href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
-                  target="_blank"
-                  ><span class="fab fa-facebook-f"></span
-                ></a>
-              </li>
-              <li>
-                <a href="https://twitter.com/readymatrimonia" target="_blank"
-                  ><span class="fab fa-twitter"></span
-                ></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
-                  target="_blank"
-                  ><span class="fab fa-youtube"></span
-                ></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.instagram.com/readymatrimonial/"
-                  target="_blank"
-                  ><span class="fab fa-instagram"></span
-                ></a>
-              </li>
-            </ul>
-            <!-- <a style="color:white;">Visitor : 8402</a> -->
+    <footer class="main-footer style-two">
+      <div class="footer-auto-container">
+        <!-- Footer Content -->
+        <div class="footer-content" style="padding: 25px 0 10px">
+          <div class="footer-logo ftr-dsk-lg">
+            <a href="my_offer#"
+              ><img src="./images/logo-2.png" alt="Site Logo"
+            /></a>
           </div>
+          <ul class="footer-nav ftr-dsk-mn">
+            <li><a href="index.html">Home</a></li>
+            <li>|</li>
+            <!-- <li><a href="signup">SignUp</a></li>
+            <li>|</li> -->
+
+            <li>
+              <a href="about-us.html">Happy Story</a>
+            </li>
+            <li>|</li>
+            <li>
+              <a href="about-us.html" target="_blank">About us</a>
+            </li>
+            <!--<li>|</li>
+                    <li><a href="franchise/login" target=_blank>Franchise</a></li>-->
+            <!--<li><a href="https://readymatrimonial.in/blog/" target=_blank>Blog</a></li>-->
+            <li>|</li>
+            <li>
+              <a href="contactus.html">Contact Us</a>
+            </li>
+          </ul>
+          <div class="copyright-text">
+            © 2025 blissmatch.in All Rights Reserved. Powered By
+            <a href="https://blissmatch.vercel.app/" target="_blank"
+              >Bliss Match</a
+            >
+          </div>
+          <ul class="social-icon-one">
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
+                target="_blank"
+                ><span class="fab fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/readymatrimonia" target="_blank"
+                ><span class="fab fa-twitter"></span
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
+                target="_blank"
+                ><span class="fab fa-youtube"></span
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/readymatrimonial/"
+                target="_blank"
+                ><span class="fab fa-instagram"></span
+              ></a>
+            </li>
+          </ul>
+          <!-- <a style="color:white;">Visitor : 8515</a> -->
         </div>
-      </footer>
+      </div>
+    </footer>
       <!-- End Footer -->
       <!--End pagewrapper-->
       <!-- Color Palate / Color Switcher -->
