--- a/contactus.html
+++ b/contactus.html
@@ -288,7 +288,7 @@
                         <li><a href="safematrimony">Safe Matrimony</a></li>
                       </ul>
                     </li>
-                    <li><a href="my_offer">Membership </a></li>
+                    <li><a href="membership-plans.html">Membership </a></li>
                     <!-- <li><a href="smart_search">Search</a></li> -->
                     <li><a class="current" href="contactus.html">Contact </a></li>
                     <!--<li><a href="https://readymatrimonial.in/blog/" target="_blank">Blog</a></li>-->
@@ -697,7 +697,7 @@
 
       <!-- Subscribe Section -->
       <section class="subscribe-section">
-        <div class="auto-container">
+        <div class="subscribe-auto-container">
           <div class="content-box">
             <div class="row">
               <!-- <div class="title-column col-lg-6 col-md-12">
@@ -725,72 +725,75 @@
       </section>
       <!--End Subscribe Section -->
 
-      <footer class="main-footer style-two">
-        <div class="auto-container">
-          <!-- Footer Content -->
-          <div class="footer-content" style="padding: 25px 0 10px">
-            <div class="footer-logo ftr-dsk-lg">
-              <a href="contactus#"
-                ><img src="./images/logo.png" alt="Site Logo"
-              /></a>
-            </div>
-            <ul class="footer-nav ftr-dsk-mn">
-              <li><a href="index.html">Home</a></li>
-              <li>|</li>
-              <li><a href="signup">SignUp</a></li>
-              <li>|</li>
 
-              <li><a href="success_story">Happy Story</a></li>
-              <li>|</li>
-              <li>
-                <a href="wedding-directory/index" target="_blank"
-                  >Wedding Services</a
-                >
-              </li>
-              <!--<li>|</li>
-                    <li><a href="franchise/login" target=_blank>Franchise</a></li>-->
-              <!--<li><a href="https://readymatrimonial.in/blog/" target=_blank>Blog</a></li>-->
-              <li>|</li>
-              <li><a href="contactus">Contact Us</a></li>
-            </ul>
-            <div class="copyright-text">
-              © 2025 matrimonysoftware.in All Rights Reserved. Powered By
-              <a href="https://www.readymatrimonial.in/" target="_blank"
-                >INFINITY SYSTEMS</a
-              >
-            </div>
-            <ul class="social-icon-one">
-              <li>
-                <a
-                  href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
-                  target="_blank"
-                  ><span class="fab fa-facebook-f"></span
-                ></a>
-              </li>
-              <li>
-                <a href="https://twitter.com/readymatrimonia" target="_blank"
-                  ><span class="fab fa-twitter"></span
-                ></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
-                  target="_blank"
-                  ><span class="fab fa-youtube"></span
-                ></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.instagram.com/readymatrimonial/"
-                  target="_blank"
-                  ><span class="fab fa-instagram"></span
-                ></a>
-              </li>
-            </ul>
-            <!-- <a style="color:white;">Visitor : 8354</a> -->
+    <footer class="main-footer style-two">
+      <div class="footer-auto-container">
+        <!-- Footer Content -->
+        <div class="footer-content" style="padding: 25px 0 10px">
+          <div class="footer-logo ftr-dsk-lg">
+            <a href="my_offer#"
+              ><img src="./images/logo-2.png" alt="Site Logo"
+            /></a>
           </div>
+          <ul class="footer-nav ftr-dsk-mn">
+            <li><a href="index.html">Home</a></li>
+            <li>|</li>
+            <!-- <li><a href="signup">SignUp</a></li>
+            <li>|</li> -->
+
+            <li>
+              <a href="about-us.html">Happy Story</a>
+            </li>
+            <li>|</li>
+            <li>
+              <a href="about-us.html" target="_blank">About us</a>
+            </li>
+            <!--<li>|</li>
+                    <li><a href="franchise/login" target=_blank>Franchise</a></li>-->
+            <!--<li><a href="https://readymatrimonial.in/blog/" target=_blank>Blog</a></li>-->
+            <li>|</li>
+            <li>
+              <a href="contactus.html">Contact Us</a>
+            </li>
+          </ul>
+          <div class="copyright-text">
+            © 2025 blissmatch.in All Rights Reserved. Powered By
+            <a href="https://blissmatch.vercel.app/" target="_blank"
+              >Bliss Match</a
+            >
+          </div>
+          <ul class="social-icon-one">
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
+                target="_blank"
+                ><span class="fab fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/readymatrimonia" target="_blank"
+                ><span class="fab fa-twitter"></span
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
+                target="_blank"
+                ><span class="fab fa-youtube"></span
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/readymatrimonial/"
+                target="_blank"
+                ><span class="fab fa-instagram"></span
+              ></a>
+            </li>
+          </ul>
+          <!-- <a style="color:white;">Visitor : 8515</a> -->
         </div>
-      </footer>
+      </div>
+    </footer>
       <!-- End Footer -->
       <!-- End Footer -->
     </div>
