--- a/membership-plans.html
+++ b/membership-plans.html
@@ -151,7 +151,7 @@
                     </li>
                     <li class="dropdown">
                       <a href="about-us.html">About</a>
-                      <ul>
+                      <!-- <ul>
                         <li><a href="about-us.html">About Us</a></li>
                         <li>
                           <a href="terms-conditions">Terms & Condition</a>
@@ -163,7 +163,7 @@
                         </li>
                         <li><a href="disclaimer">Disclaimer</a></li>
                         <li><a href="safematrimony">Safe Matrimony</a></li>
-                      </ul>
+                      </ul> -->
                     </li>
                     <li><a href="membership-plans.html">Membership </a></li>
                     <!-- <li><a href="smart_search">Search</a></li> -->
@@ -261,7 +261,7 @@
           }
         </style>
 
-        <div class="navTabs">
+        <!-- <div class="navTabs">
           <ul class="nav nav-tabs">
             <li class="nav-item">
               <a class="nav-link" href="index">Home</a>
@@ -293,7 +293,7 @@
               /></a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
       <div id="search-popup" class="search-popup">
         <div class="close-search theme-btn">
