--- a/membership-plans.html
+++ b/membership-plans.html
@@ -1025,26 +1025,26 @@
           <ul class="social-icon-one">
             <li>
               <a
-                href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
+                href=""
                 target="_blank"
                 ><span class="fab fa-facebook-f"></span
               ></a>
             </li>
             <li>
-              <a href="https://twitter.com/readymatrimonia" target="_blank"
+              <a href="" target="_blank"
                 ><span class="fab fa-twitter"></span
               ></a>
             </li>
             <li>
               <a
-                href="https://www.youtube.com/channel/UCuhVI8vk-Q4LmmtDB6OSlhQ"
+                href=""
                 target="_blank"
                 ><span class="fab fa-youtube"></span
               ></a>
             </li>
             <li>
               <a
-                href="https://www.instagram.com/readymatrimonial/"
+                href=""
                 target="_blank"
                 ><span class="fab fa-instagram"></span
               ></a>
