--- a/contactus.html
+++ b/contactus.html
@@ -545,13 +545,13 @@
                     novalidate="novalidate"
                   >
                     <div class="row clearfix">
-                      <div class="col-lg-12 col-md-12 col-sm-12">
+                      <!-- <div class="col-lg-12 col-md-12 col-sm-12">
                         <h2>Address</h2>
                         <p class="mt-3">
                           Near, T3B, 4th Fooor, Matoshree App, Railway Bridge,
                           Vijaynagar, Sangli, Maharashtra 416416
                         </p>
-                      </div>
+                      </div> -->
                       <div class="col-lg-12 col-md-12 col-sm-12">
                         <h2>Feedback</h2>
                       </div>
