--- a/contactus.html
+++ b/contactus.html
@@ -8,7 +8,7 @@
       content="A7vZI3v+Gz7JfuRolKNM4Aff6zaGuT7X0mf3wtoZTnKv6497cVMnhy03KDqX7kBz/q/iidW7srW31oQbBt4VhgoAAACUeyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGUuY29tOjQ0MyIsImZlYXR1cmUiOiJEaXNhYmxlVGhpcmRQYXJ0eVN0b3JhZ2VQYXJ0aXRpb25pbmczIiwiZXhwaXJ5IjoxNzU3OTgwODAwLCJpc1N1YmRvbWFpbiI6dHJ1ZSwiaXNUaGlyZFBhcnR5Ijp0cnVlfQ=="
     />
 
-    <title>Contact - Open Source Matrimony</title>
+    <title>Contact Us- BlissMatch</title>
     <!-- Stylesheets -->
     <link href="./css/bootstrap.css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" />
@@ -24,11 +24,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <meta
+    <!-- <meta
       name="keywords"
       content="CMS application, matrimony clone, matrimonial software, premium matrimony"
-    />
-    <meta name="description" content="PHP matrimony website development" />
+    /> -->
+    <!-- <meta name="description" content="PHP matrimony website development" /> -->
     <script
       type="text/javascript"
       async=""
