--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Matrimony Software Live Demo | Open Source Matrimony Script</title>
+    <title>BlissMatch</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -277,7 +277,7 @@
             <ul class="navigation clearfix">
               <!--Keep This Empty / Menu will come through Javascript-->
             </ul>
-            <li
+            <l
               class="dropdown"
               style="
                 margin-left: 22px;
