--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <title>About Us</title>
+    <title>About Us - BlissMatch</title>
     <!-- Stylesheets -->
     <link href="./css/bootstrap.css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" />
