meta tag changes

--- a/about-us.html
+++ b/about-us.html
@@ -21,11 +21,11 @@
     />
     <meta
       name="keywords"
-      content="Marriage beuro application, matrimony template, Matrimony site Live Demo"
+      content="blissmatch matrimony"
     />
     <meta
       name="description"
-      content="ready matrimonial providing a ready-made package that you can install"
+      content="Journey toward's finding your perfect life partner"
     />
     <style>
       @media screen and (max-width: 768px) {
