--- a/contactus.html
+++ b/contactus.html
@@ -24,11 +24,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <!-- <meta
+    <meta
       name="keywords"
-      content="CMS application, matrimony clone, matrimonial software, premium matrimony"
-    /> -->
-    <!-- <meta name="description" content="PHP matrimony website development" /> -->
+      content="blissmatch matrimony"
+    />
+    <meta
+      name="description"
+      content="Journey toward's finding your perfect life partner"
+    />
     <script
       type="text/javascript"
       async=""
