--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
     <meta
       name="keywords"
-      content="php matrimony, matrimony template, matrimony software, ready matrimony script"
+      content="blissmatch matrimony"
     />
     <meta
       name="description"
-      content="readymade PHP matrimony web and android application with Beautiful Templates"
+      content="Journey toward's finding your perfect life partner"
     />
     <!-- <script type="text/javascript">
  $(window).load(function(){        
