--- a/membership-plans.html
+++ b/membership-plans.html
@@ -21,9 +21,12 @@
     />
     <meta
       name="keywords"
-      content="Membership plan, Groom and bride subscription plan,"
+      content="blissmatch matrimony"
     />
-    <meta name="description" content="Matrimony software membership plan" />
+    <meta
+      name="description"
+      content="Journey toward's finding your perfect life partner"
+    />
     <style>
       .contacts {
         margin-left: 2px;
