--- a/contactus.html
+++ b/contactus.html
@@ -293,7 +293,7 @@
                     </li>
                     <li><a href="membership-plans.html">Membership </a></li>
                     <!-- <li><a href="smart_search">Search</a></li> -->
-                    <li><a class="current" href="contactus.html">Contact </a></li>
+                    <li class="current"><a href="contactus.html">Contact </a></li>
                     <!--<li><a href="https://readymatrimonial.in/blog/" target="_blank">Blog</a></li>-->
                     <!--<li><a href="wedding-directory/index" target=_blank>Wedding Services</a></li>-->
                     <!-- <li><a href="https://www.matrimonysoftware.in/app/Matrimony%20Script.apk" target="_blank">Get App
@@ -338,7 +338,7 @@
             <ul class="navigation clearfix">
               <!--Keep This Empty / Menu will come through Javascript-->
             </ul>
-            <li
+            <!-- <li
               class="dropdown"
               style="
                 margin-left: 22px;
@@ -353,8 +353,8 @@
                 style="color: #343a40"
                 >Wedding Services</a
               >
-            </li>
-            <hr />
+            </li> -->
+            <!-- <hr /> -->
             <!-- <a href="login" class="theme-btn btn-getstyle-one ml-4 mt-2"><span class="btn-title">Login</span></a>
           <a href="signup" class="theme-btn btn-style-one mt-2 ml-3"><span class="btn-title">SignUp</span></a> -->
           </nav>
