--- a/membership-plans.html
+++ b/membership-plans.html
@@ -19,10 +19,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <meta
-      name="keywords"
-      content="blissmatch matrimony"
-    />
+    <meta name="keywords" content="blissmatch matrimony" />
     <meta
       name="description"
       content="Journey toward's finding your perfect life partner"
@@ -168,7 +165,9 @@
                         <li><a href="safematrimony">Safe Matrimony</a></li>
                       </ul> -->
                     </li>
-                    <li><a href="membership-plans.html">Membership </a></li>
+                    <li class="current">
+                      <a href="membership-plans.html">Membership </a>
+                    </li>
                     <!-- <li><a href="smart_search">Search</a></li> -->
                     <li><a href="contactus.html">Contact </a></li>
                     <!--<li><a href="https://readymatrimonial.in/blog/" target="_blank">Blog</a></li>-->
@@ -197,7 +196,7 @@
             <ul class="navigation clearfix">
               <!--Keep This Empty / Menu will come through Javascript-->
             </ul>
-            <li
+            <!-- <li
               class="dropdown"
               style="
                 margin-left: 22px;
@@ -212,8 +211,8 @@
                 style="color: #343a40"
                 >Wedding Services</a
               >
-            </li>
-            <hr />
+            </li> -->
+            <!-- <hr /> -->
             <!-- <a href="login" class="theme-btn btn-getstyle-one ml-4 mt-2"><span class="btn-title">Login</span></a>
           <a href="signup" class="theme-btn btn-style-one mt-2 ml-3"><span class="btn-title">SignUp</span></a> -->
           </nav>
@@ -1027,9 +1026,7 @@
           </div>
           <ul class="social-icon-one">
             <li>
-              <a
-                href=""
-                target="_blank"
+              <a href="" target="_blank"
                 ><span class="fab fa-facebook-f"></span
               ></a>
             </li>
@@ -1039,16 +1036,12 @@
               ></a>
             </li>
             <li>
-              <a
-                href=""
-                target="_blank"
+              <a href="" target="_blank"
                 ><span class="fab fa-youtube"></span
               ></a>
             </li>
             <li>
-              <a
-                href=""
-                target="_blank"
+              <a href="" target="_blank"
                 ><span class="fab fa-instagram"></span
               ></a>
             </li>
