Slider section changes , added more photos

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min_1.js"></script>
 
-    <meta
-      name="keywords"
-      content="blissmatch matrimony"
-    />
+    <meta name="keywords" content="blissmatch matrimony" />
     <meta
       name="description"
       content="Journey toward's finding your perfect life partner"
@@ -432,10 +429,42 @@
           </div>
 
           <!-- Slide Item -->
-          <div class="slide-item" style="background-image: url(images/2.jpg)">
+          <div class="slide-item" style="background-image: url(images/4.jpg)">
             <div class="auto-container">
               <div class="content-box">
                 <h2>Find Your Perfect <br />Match Here!!!</h2>
+                <!--   <ul class="info-list">
+                  <li><a href="signup" style="color: white;"><span class="icon fas fa-edit"></span> Sign Up</a></li>
+                  <li><a href="signup" style="color: white;"><span class="icon fas fa-user-plus"></span> Connect</a></li>
+                  <li><a href="signup" style="color: white;"><span class="icon fas fa-comments"></span> Interact</a></li>
+                </ul> -->
+              </div>
+            </div>
+          </div>
+          <div class="slide-item" style="background-image: url(images/2.jpg)">
+            <div class="auto-container">
+              <div class="content-box">
+                <h2>
+                  Welcome To <br />
+                  BLISSMATCH
+                </h2>
+                <!-- <h2>Find Your Perfect <br />Match Here!!!</h2> -->
+                <!--   <ul class="info-list">
+                  <li><a href="signup" style="color: white;"><span class="icon fas fa-edit"></span> Sign Up</a></li>
+                  <li><a href="signup" style="color: white;"><span class="icon fas fa-user-plus"></span> Connect</a></li>
+                  <li><a href="signup" style="color: white;"><span class="icon fas fa-comments"></span> Interact</a></li>
+                </ul> -->
+              </div>
+            </div>
+          </div>
+          <div class="slide-item" style="background-image: url(images/3.jpg)">
+            <div class="auto-container">
+              <div class="content-box">
+                <h2>
+                  Journey Towards's Finding <br />
+                  Your Perfect Life Partner
+                </h2>
+                <!-- <h2>Find Your Perfect <br />Match Here!!!</h2> -->
                 <!--   <ul class="info-list">
                   <li><a href="signup" style="color: white;"><span class="icon fas fa-edit"></span> Sign Up</a></li>
                   <li><a href="signup" style="color: white;"><span class="icon fas fa-user-plus"></span> Connect</a></li>
@@ -455,14 +484,14 @@
             <div class="auto-container">
               <div class="content-box mt-5">
                 <h2>Someone Special is <br />Waiting For You</h2>
-                <div class="btn-box">
+                <!-- <div class="btn-box">
                   <a
                     href="smart_search"
                     class="theme-btn btn btn-style-two btn-style-letsbegin"
                     ><span class="btn-title">Free Signup</span></a
                   >
-                </div>
-                <div class="btn-box"></div>
+                </div> -->
+                <!-- <div class="btn-box"></div> -->
               </div>
             </div>
           </div>
@@ -472,13 +501,51 @@
             <div class="auto-container">
               <div class="content-box mt-5">
                 <h2>Find Your Perfect <br />Match Here!!!</h2>
-                <div class="btn-box">
+                <!-- <div class="btn-box">
                   <a
                     href="smart_search"
                     class="theme-btn btn btn-style-two btn-style-letsbegin"
                     ><span class="btn-title">Search Now</span></a
                   >
-                </div>
+                </div> -->
+                <div class="btn-box"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slide-item" style="background-image: url(images/m-4.jpg)">
+            <div class="auto-container">
+              <div class="content-box mt-5">
+                <h2>
+                  Welcome To <br />
+                  BLISSMATCH
+                </h2>
+                <!-- <div class="btn-box">
+                  <a
+                    href="smart_search"
+                    class="theme-btn btn btn-style-two btn-style-letsbegin"
+                    ><span class="btn-title">Search Now</span></a
+                  >
+                </div> -->
+                <div class="btn-box"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slide-item" style="background-image: url(images/m-3.jpg)">
+            <div class="auto-container">
+              <div class="content-box mt-5">
+                <h2>
+                  Journey Towards's Finding <br />
+                  Your Perfect Life Partner
+                </h2>
+                <!-- <div class="btn-box">
+                  <a
+                    href="smart_search"
+                    class="theme-btn btn btn-style-two btn-style-letsbegin"
+                    ><span class="btn-title">Search Now</span></a
+                  >
+                </div> -->
                 <div class="btn-box"></div>
               </div>
             </div>
@@ -642,7 +709,7 @@
       <!-- advertise  -->
       <!-- End advertise -->
       <!-- About Section -->
-      <section class="about-section-two d-none d-md-block">
+      <section class="about-section-two d-md-block">
         <div class="anim-icons full-width">
           <!-- <span class="icon icon-circle-blue wow fadeIn"></span> -->
           <span class="icon icon-dots wow fadeInleft"></span>
@@ -733,7 +800,7 @@
 
     <!--End Wedding directory -->
     <!-- Happy Story -->
-    <section class="news-section d-none d-md-block d-lg-block d-xl-block">
+    <section class="news-section  d-md-block d-lg-block d-xl-block">
       <div class="anim-icons">
         <span class="icon icon-circle-blue wow fadeIn"></span>
         <span class="icon twist-line-1 wow zoomIn"></span>
@@ -1094,7 +1161,6 @@
     </section>
     <!--End Subscribe Section -->
 
-
     <footer class="main-footer style-two">
       <div class="footer-auto-container">
         <!-- Footer Content -->
@@ -1133,9 +1199,7 @@
           </div>
           <ul class="social-icon-one">
             <li>
-              <a
-                href=""
-                target="_blank"
+              <a href="" target="_blank"
                 ><span class="fab fa-facebook-f"></span
               ></a>
             </li>
@@ -1145,16 +1209,12 @@
               ></a>
             </li>
             <li>
-              <a
-                href=""
-                target="_blank"
+              <a href="" target="_blank"
                 ><span class="fab fa-youtube"></span
               ></a>
             </li>
             <li>
-              <a
-                href=""
-                target="_blank"
+              <a href="" target="_blank"
                 ><span class="fab fa-instagram"></span
               ></a>
             </li>
